Implement drag&drop support for flatpaks

BUG: 495552